To test opam-dune-lint with OCaml-CI
Signed-off-by: Alpha DIALLO <moyodiallo@gmail.com>

--- a/bin/dune
+++ b/bin/dune
@@ -63,6 +63,12 @@
 
 (install
  (section bin)
+ (package dune)
+ (files
+  (dune.exe as dune-lint)))
+
+(install
+ (section bin)
  (enabled_if
   (= %{profile} dune-bootstrap))
  (package dune)
